2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_document): Return value
	even if no document element is found.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |$in_body| is no longer a function.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The |$in_body| code has been moved down.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The "trailing end" insertion mode
	is split into "after html body" and "after html frameset"
	insertion modes.  Their codes are merged with "after body"
	and "after frameset" codes.  |$previous_insertion_mode|
	has been removed.  "after frameset" code is 
	merged with "in frameset" code.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The "before head" insertion mode is 
	merged with the "in head" insertion mode.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Cases in "in head" insertion mode are
	reorganized.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Some cases in "in table" insertion mode
	are merged.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The "in row" insertion mode is merged
	with "in table" insertion mode.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The "in table" and "in table body" insertion
	modes are merged.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: There is no "in table head" or "in table foot"
	insertion mode!

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |<noframes>| "in frameset" and "in noframes"
	now directly invoke the handler.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Codes for "in cell" insertion mode
	is merged to the "in body" insertion mode code.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Codes for "in body" and "in caption"
	insertion modes are merged.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Two |!!!next-token|s were missing.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>
