@@ -1,3 +1,9 @@
+2007-08-04  Wakaba  <wakaba@suika.fam.cx>
+
+	* ContentChecker.pm: HTML |time| element is implemented.
+
+	* HTMLTable.pm: Comments are updated as HTML5 is revised.
+
 2007-07-21  Wakaba  <wakaba@suika.fam.cx>
 
 	* ContentChecker.pm (check_document): Return value
